# fastDFE

./: .RData  .Rbuildignore  .Rhistory  .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .snakemake  CITATION.md  DESCRIPTION  LICENSE  Makefile  NAMESPACE  README.md  TODO.md  codecov.yml  coverage.xml  pyproject.toml  pytest.ini  results  serialized.json  summary.json  workflow
.github/workflows/: pip-publish.yml  pip-test-publish.yml  python-app.yml  run-tests-different-os.yml  run-tests-local-different-os.yml  run-tests-local.yml  run-tests.yml  upload-coverage.yml
R/: fastdfe.R  plot_base_inference.R  plot_joint_inference.R  test.R
docs/: conf.py  fastdfe.rst  index.rst  installation.rst  installation_r.rst  introduction.rst  modules.rst  refs.bib  requirements.txt
docs/_static/: custom.css
docs/modules/: annotation.rst  changelog.rst  citing.rst  config.rst  filtration.rst  inference.rst  parametrization.rst  parser.rst  simulation.rst  spectra.rst  spectrum.rst
docs/notebooks/: inference.ipynb  parser.ipynb  quickstart.ipynb  quickstart_R.ipynb  quickstart_python.ipynb  quickstart_r.ipynb  spectra.ipynb
docs/python/: installation.rst
docs/reference/: config.rst  example_pendula.ipynb  example_pendula_marginal.ipynb  example_pendula_simple.ipynb  example_sapiens.ipynb  inference_R.ipynb  installation_python.rst  installation_r.rst  introduction.rst  logging.rst  miscellaneous.rst  parametrizations.ipynb  parser.ipynb  quickstart_python.ipynb  quickstart_r.ipynb
fastdfe/: __init__.py  abstract_inference.py  annotation.py  base_inference.py  bio_handlers.py  bootstrap.py  config.py  discretization.py  filtration.py  io_handlers.py  joint_inference.py  json_handlers.py  likelihood.py  mle.py  optimization.py  parametrization.py  parser.py  polydfe.py  polydfe_utils.py  settings.py  shared_inference.py  simulation.py  spectrum.py  utils.py  vcf.py  visualization.py
man/: fastdfe_is_installed.Rd  install_fastdfe.Rd  load_fastdfe.Rd
resources/EST-SFS/: test-betula-biallelic-10000.txt  (+2 more)
scratch/: parse_restore_polydfe_init_file.txt
snakemake/: Snakefile  config.yaml  snpEff_genes.txt  snpEff_summary.html
testing/: __init__.py  conftest.py  pytest.ini  test_ancestral_synthetic.py  test_annotation.py  test_annotation_mocked.py  test_annotator.py  test_base_inference.py  test_bootstrap.py  test_config.py  test_covariates.py  test_discretization.py  test_fast_inference.py  test_fast_parser.py  test_fastdfe.py  test_filter.py  test_filterer.py  test_filtration.py  test_io_handlers.py  test_joint_inference.py  test_json_handlers.py  test_likelihood.py  test_mle.py  test_optimization.py  test_parametrization.py  test_parser.py  test_polydfe_wrapper.py  test_shared_inference.py  test_simulation.py  test_spectra.py  test_units_coverage.py
tests/: testthat.R
(+10781 files in other folders)
