[tool.poetry]
name = "fastdfe"
version = "0.1.4-beta"
description = "Fast, flexible, and hierarchical inference of the distribution of fitness effects"
authors = ["Sendrowski <sendrowski.janek@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typing-extensions = "^4.5.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
scipy = "^1.9.3"
jsonpickle = "^3.0.0"
multiprocess = "^0.70.12"
pyyaml = "^6.0"
cyvcf2 = "^0.30.9"
pyfaidx = "^0.7.1"
tqdm = "^4.60.0"
mpmath = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
