[tool.poetry]
name = "fastdfe"
version = "1.1.8"
description = "Fast and flexible inference of the distribution of fitness effects (DFE), VCF-SFS parsing with ancestral allele and site-degeneracy annotation."
authors = ["Sendrowski <sendrowski.janek@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
typing-extensions = "^4.5.0"
matplotlib = "^3.7.0"
seaborn = "^0.13.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
jsonpickle = "^3.0.0"
multiprocess = "^0.70.12"
pyyaml = "^6.0"
cyvcf2 = "^0.31.0"
tqdm = "^4.60.0"
mpmath = "^1.3.0"
biopython = ">=1.80,<1.82"
requests = ">=2.28"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
urllib3 = "^1.26.0" # problems with poetry and urllib3 version 2
sphinx_book_theme = "^1.1.2"
sphinx-autodoc-typehints = "^2.1.0"
sphinx-copybutton = "^0.5.2"
myst-nb = "^1.1.0"
sphinx = "^7.3.7"
pygments = "^2.15.1"
sphinxcontrib-bibtex = "^2.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
